# Translator

./: .gitignore  Dockerfile  ENDPOINTS.md  README.md  cli.py  docker-compose.yml  pyproject.toml  setup.sh  test.py
alembic/: env.py
alembic/versions/: 066cc622a92f_init.py  0f6d758d0ebd_response_language_id_and_session.py  5f66c1f73bbb_dataset_multi_category.py  907677b2d588_m2m_languages_role_admin.py  98ab65168833_add_ai_generated_responses_support.py  9b6cf4bfca2c_make_original_text_unique.py  e91556916cb0_unique_attribute_tribe.py  ec0fb2bde0ef_cascaderelations.py
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  category.py  dataset_category.py  language.py  otp.py  refresh_token.py  response.py  response_vote.py  subtribe.py  tribe.py  unclean_dataset.py  user.py  user_dataset_session.py  user_language.py
app/repositories/: category_repository.py  dataset_repository.py  generator_repository.py  language_repository.py  response_repository.py  subtribe_repository.py  tribe_repository.py  user_dataset_session_repository.py  user_language_repository.py  user_repository.py  vote_repository.py
app/schemas/: ai.py  api_response.py  category.py  dataset.py  language.py  pagination.py  response.py  subtribe.py  translator.py  tribe.py  user.py  voice.py  vote.py
app/services/: AudioInputService.py  FunctionService.py  IntentService.py  PipelineService.py  STTService.py  TTSService.py  TTTService.py  ai_translation_service.py  (+10 more)
tests/: test_users.py
(+12 files in other folders)
