[project]
name = "languaage"
version = "0.1.0"
description = "Language Dataset Platform"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "alembic>=1.18.4",
    "fastapi",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    # Async PostgreSQL
    "asyncpg>=0.29.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Voice Assistant Pipeline
    "openai-whisper",
    "edge-tts>=6.1.12",
    "sounddevice>=0.4.6",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pygame>=2.5.0",
    "python-multipart>=0.0.9",
    "openai>=2.34.0",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
